added notifications on travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: python
+cache: pip
 python:
   - 3.6
 
-script: python3 app.py
+matrix:
+  fast_finish: true
 
+script: python3 app.py
 deploy: 
   provider: heroku
   api_key: $HEROKU_TOKEN
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
